# rab-web

./: Cargo.toml  README.md  index.html
src/: armors.rs  lib.rs  locale.rs  main.rs  storage.rs
src/components/: add_skill.rs  build_details.rs  builds.rs  home.rs  mod.rs  skill_row.rs  slot_button.rs  talismans.rs
src/locale/: de.rs  en.rs  es.rs  fr.rs  it.rs  pl.rs  ru.rs
