[package]
version = "0.1.0"
name = "rab-web"
repository = "https://github.com/itytophile/rab-web"
authors = ["itytophile <imran.tierce@protonmail.com>"]
description = "Rusty Armor Builds - Monster Hunter Rise Armor Set Creation Tool but on the web!"
keywords = ["monster", "hunter", "rise", "armor", "search", "web"]
license = "GPL-3.0"
readme = "./README.md"
edition = "2021"

[dependencies]
rab-core = "0.4"
reqwasm = "0.4"
anyhow = "1"
ron = "0.7"
dioxus = { version = "0.1", features = ["web"] }
im-rc = "15"
