[package]
version = "0.1.0"
name = "rab-web"
repository = "https://github.com/itytophile/rab-web"
authors = ["itytophile <imran.tierce@protonmail.com>"]
description = "Rusty Armor Builds - Monster Hunter Rise Armor Set Creation Tool but on the web!"
keywords = ["monster", "hunter", "rise", "armor", "search", "web"]
license = "GPL-3.0"
readme = "./README.md"
edition = "2021"

[dependencies]
rab-core = "0.4"
dioxus = { version = "0.6", features = ["web"] }
im-rc = { version = "15", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
lexical-sort = "0.3"
diacritics = "0.2"
web-sys = { version = "0.3", features = ["Storage"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[package.metadata.bundle]
name = "RAB"
identifier = "org.ityt.rab"
version = "1.0.0"
category = "Developer Tool"
short_description = "Search armor sets for you"
long_description = """
You tell RAB what skills you want and it gives what sets you need
"""
